# iniparser

./: .gitignore  CMakeLists.txt  INIFile.cpp  INIFile.h  INIParser.cpp  INISection.cpp  INISection.h  INIValue.h  LICENSE  README.md  main.cpp  sample.ini
src/: INIFile.cpp  INIFile.h  INIParser.h  INIProp.cpp  INIProp.h  INISection.cpp  INISection.h  INIValue.cpp  INIValue.h  INIWriter.cpp  INIWriter.h  utility.h
test/: INIFileFixture.cpp  INIFileTest.cpp  main.cpp  runAllTest.cpp  sample.ini  sample2.ini
